# document-vault-ai

./: .env.example  .gitignore  AI_USAGE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_document_schema.py  003_chat_schema.py  004_multi_doc_chat.py  005_document_versioning.py  006_document_intelligence.py  007_upload_batches.py
backend/app/: config.py  dependencies.py  exceptions.py  logging_config.py  main.py
backend/app/ai/: chunking.py  embeddings.py  extractors.py  guardrails.py  langchain_memory.py  langchain_rag.py  llm.py  prompts.py  retrieval.py
backend/app/api/: router.py
backend/app/db/: base.py  session.py  sync_session.py
backend/app/middleware/: __init__.py  request_id.py  request_logging.py
backend/app/models/: __init__.py  batch.py  chat.py  chat_session_document.py  chunk.py  document.py  enums.py  processing.py
backend/app/schemas/: batch.py  chat.py  document.py  document_analysis.py  health.py  metrics.py  openapi_examples.py  openapi_metadata.py  openapi_responses.py
backend/app/services/: ai_usage_service.py  api_latency.py  chat_service.py  comparison_service.py  document_service.py  (+6 more)
backend/tests/: conftest.py  test_api_latency.py  test_chat.py  test_document_intelligence.py  test_documents.py  test_errors.py  test_followups.py  test_health.py  test_langchain.py  test_llm.py  test_metrics.py  test_phase4.py  test_phase5.py  test_production_readiness.py  test_rag.py  test_session_title.py  test_system_metrics.py
(+44 files in other folders)
