[project]
name = "document-vault-ai"
version = "0.1.0"
description = "AI-powered document vault with RAG chat"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "celery>=5.4.0",
  "redis>=5.2.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "pgvector>=0.3.6",
  "httpx>=0.28.0",
  "psycopg2-binary>=2.9.10",
]

[project.optional-dependencies]
ai = [
  "pdfplumber>=0.11.0",
  "python-docx>=1.1.0",
  "langchain>=0.3.0",
  "langchain-classic>=1.0.0",
  "langchain-community>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "langchain-openai>=0.2.0",
  "sentence-transformers>=3.3.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
